parser.output
   0  $accept : %entry% $end

   1  s : decl_instr_list EOL

   2  decl_instr : decl
   3             | instr

   4  decl_instr_list : decl_instr
   5                  | decl_instr PVirgule decl_instr_list

   6  return_type :
   7              | DPoints type_expr

   8  decl : Type Id Eq type_expr PVirgule
   9       | Let bindings PVirgule
  10       | Const bindings PVirgule
  11       | Function Id Lpar bindings Rpar return_type LAcc decl_instr_list RAcc

  12  instr : PVirgule
  13        | expr PVirgule
  14        | LAcc decl_instr_list RAcc
  15        | Var_decl bindings PVirgule
  16        | If Lpar expr Rpar instr
  17        | If Lpar expr Rpar instr Else instr
  18        | While Lpar expr Rpar instr
  19        | Return PVirgule
  20        | Return expr PVirgule

  21  expr : Cst_int
  22       | Cst_float
  23       | Cst_bool
  24       | Cst_string
  25       | Lpar expr Rpar
  26       | Typeof expr
  27       | Minus expr
  28       | Plus expr
  29       | LBracket expr_list RBracket
  30       | LAcc obj_list RAcc
  31       | left_mem
  32       | expr Plus expr
  33       | expr Minus expr
  34       | expr Times expr
  35       | expr Div expr
  36       | expr Exp expr
  37       | expr Comp_lt expr
  38       | expr Comp_le expr
  39       | expr Comp_gt expr
  40       | expr Comp_ge expr
  41       | expr Double_eq expr
  42       | expr Diff expr
  43       | expr Triple_eq expr
  44       | expr Double_diff expr
  45       | expr And expr
  46       | expr Or expr
  47       | expr Lpar expr_list Rpar
  48       | left_mem Eq expr

  49  expr_list :
  50            | expr expr_list_2

  51  expr_list_2 :
  52              | Virgule expr_list

  53  obj_list : Id DPoints expr
  54           | Id DPoints expr Virgule obj_list

  55  binding : Id
  56          | Id DPoints type_expr
  57          | Id Eq expr
  58          | Id DPoints type_expr Eq expr

  59  bindings : binding
  60           | binding Virgule bindings

  61  left_mem : Id
  62           | expr LBracket expr RBracket
  63           | expr Point Id

  64  type_expr : Type_num
  65            | Type_bool
  66            | Type_string

  67  %entry% : '\001' s

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . s  (67)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 7
	PVirgule  shift 8
	Var_decl  shift 9
	If  shift 10
	While  shift 11
	Return  shift 12
	Type  shift 13
	Let  shift 14
	Const  shift 15
	Function  shift 16
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	s  goto 23
	decl_instr_list  goto 24
	decl_instr  goto 25
	decl  goto 26
	instr  goto 27
	expr  goto 28
	left_mem  goto 29


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	expr : Plus . expr  (28)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 31
	left_mem  goto 29


state 4
	expr : Lpar . expr Rpar  (25)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 32
	left_mem  goto 29


state 5
	expr : Typeof . expr  (26)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 33
	left_mem  goto 29


state 6
	expr : LBracket . expr_list RBracket  (29)
	expr_list : .  (49)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	RBracket  reduce 49

	expr  goto 34
	expr_list  goto 35
	left_mem  goto 29


state 7
	instr : LAcc . decl_instr_list RAcc  (14)
	expr : LAcc . obj_list RAcc  (30)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 7
	PVirgule  shift 8
	Var_decl  shift 9
	If  shift 10
	While  shift 11
	Return  shift 12
	Type  shift 13
	Let  shift 14
	Const  shift 15
	Function  shift 16
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 36
	Minus  shift 22
	.  error

	decl_instr_list  goto 37
	decl_instr  goto 25
	decl  goto 26
	instr  goto 27
	expr  goto 28
	obj_list  goto 38
	left_mem  goto 29


state 8
	instr : PVirgule .  (12)

	.  reduce 12


state 9
	instr : Var_decl . bindings PVirgule  (15)

	Id  shift 39
	.  error

	bindings  goto 40
	binding  goto 41


state 10
	instr : If . Lpar expr Rpar instr  (16)
	instr : If . Lpar expr Rpar instr Else instr  (17)

	Lpar  shift 42
	.  error


state 11
	instr : While . Lpar expr Rpar instr  (18)

	Lpar  shift 43
	.  error


state 12
	instr : Return . PVirgule  (19)
	instr : Return . expr PVirgule  (20)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	PVirgule  shift 44
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 45
	left_mem  goto 29


state 13
	decl : Type . Id Eq type_expr PVirgule  (8)

	Id  shift 46
	.  error


state 14
	decl : Let . bindings PVirgule  (9)

	Id  shift 39
	.  error

	bindings  goto 47
	binding  goto 41


state 15
	decl : Const . bindings PVirgule  (10)

	Id  shift 39
	.  error

	bindings  goto 48
	binding  goto 41


state 16
	decl : Function . Id Lpar bindings Rpar return_type LAcc decl_instr_list RAcc  (11)

	Id  shift 49
	.  error


state 17
	expr : Cst_int .  (21)

	.  reduce 21


state 18
	expr : Cst_float .  (22)

	.  reduce 22


state 19
	expr : Cst_bool .  (23)

	.  reduce 23


state 20
	expr : Cst_string .  (24)

	.  reduce 24


state 21
	left_mem : Id .  (61)

	.  reduce 61


state 22
	expr : Minus . expr  (27)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 50
	left_mem  goto 29


state 23
	%entry% : '\001' s .  (67)

	.  reduce 67


state 24
	s : decl_instr_list . EOL  (1)

	EOL  shift 51
	.  error


state 25
	decl_instr_list : decl_instr .  (4)
	decl_instr_list : decl_instr . PVirgule decl_instr_list  (5)

	PVirgule  shift 52
	EOL  reduce 4
	RAcc  reduce 4


state 26
	decl_instr : decl .  (2)

	.  reduce 2


state 27
	decl_instr : instr .  (3)

	.  reduce 3


state 28
	instr : expr . PVirgule  (13)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Plus  shift 53
	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	And  shift 67
	Or  shift 68
	LBracket  shift 69
	PVirgule  shift 70
	Minus  shift 71
	.  error


state 29
	expr : left_mem .  (31)
	expr : left_mem . Eq expr  (48)

	Eq  shift 72
	Plus  reduce 31
	Times  reduce 31
	Lpar  reduce 31
	Rpar  reduce 31
	Point  reduce 31
	Exp  reduce 31
	Div  reduce 31
	Comp_lt  reduce 31
	Comp_le  reduce 31
	Comp_gt  reduce 31
	Comp_ge  reduce 31
	Double_eq  reduce 31
	Triple_eq  reduce 31
	Diff  reduce 31
	Double_diff  reduce 31
	And  reduce 31
	Or  reduce 31
	LBracket  reduce 31
	RBracket  reduce 31
	RAcc  reduce 31
	PVirgule  reduce 31
	Virgule  reduce 31
	Minus  reduce 31


state 30
	expr : LAcc . obj_list RAcc  (30)

	Id  shift 73
	.  error

	obj_list  goto 38


31: shift/reduce conflict (shift 55, reduce 28) on Lpar
state 31
	expr : Plus expr .  (28)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	LBracket  shift 69
	Plus  reduce 28
	Rpar  reduce 28
	And  reduce 28
	Or  reduce 28
	RBracket  reduce 28
	RAcc  reduce 28
	PVirgule  reduce 28
	Virgule  reduce 28
	Minus  reduce 28


state 32
	expr : Lpar expr . Rpar  (25)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Plus  shift 53
	Times  shift 54
	Lpar  shift 55
	Rpar  shift 74
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	And  shift 67
	Or  shift 68
	LBracket  shift 69
	Minus  shift 71
	.  error


33: shift/reduce conflict (shift 53, reduce 26) on Plus
33: shift/reduce conflict (shift 54, reduce 26) on Times
33: shift/reduce conflict (shift 55, reduce 26) on Lpar
33: shift/reduce conflict (shift 56, reduce 26) on Point
33: shift/reduce conflict (shift 57, reduce 26) on Exp
33: shift/reduce conflict (shift 58, reduce 26) on Div
33: shift/reduce conflict (shift 59, reduce 26) on Comp_lt
33: shift/reduce conflict (shift 60, reduce 26) on Comp_le
33: shift/reduce conflict (shift 61, reduce 26) on Comp_gt
33: shift/reduce conflict (shift 62, reduce 26) on Comp_ge
33: shift/reduce conflict (shift 63, reduce 26) on Double_eq
33: shift/reduce conflict (shift 64, reduce 26) on Triple_eq
33: shift/reduce conflict (shift 65, reduce 26) on Diff
33: shift/reduce conflict (shift 66, reduce 26) on Double_diff
33: shift/reduce conflict (shift 67, reduce 26) on And
33: shift/reduce conflict (shift 68, reduce 26) on Or
33: shift/reduce conflict (shift 69, reduce 26) on LBracket
33: shift/reduce conflict (shift 71, reduce 26) on Minus
state 33
	expr : Typeof expr .  (26)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Plus  shift 53
	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	And  shift 67
	Or  shift 68
	LBracket  shift 69
	Minus  shift 71
	Rpar  reduce 26
	RBracket  reduce 26
	RAcc  reduce 26
	PVirgule  reduce 26
	Virgule  reduce 26


state 34
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	expr_list : expr . expr_list_2  (50)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)
	expr_list_2 : .  (51)

	Plus  shift 53
	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	And  shift 67
	Or  shift 68
	LBracket  shift 69
	Virgule  shift 75
	Minus  shift 71
	Rpar  reduce 51
	RBracket  reduce 51

	expr_list_2  goto 76


state 35
	expr : LBracket expr_list . RBracket  (29)

	RBracket  shift 77
	.  error


state 36
	obj_list : Id . DPoints expr  (53)
	obj_list : Id . DPoints expr Virgule obj_list  (54)
	left_mem : Id .  (61)

	DPoints  shift 78
	Plus  reduce 61
	Times  reduce 61
	Lpar  reduce 61
	Point  reduce 61
	Exp  reduce 61
	Div  reduce 61
	Comp_lt  reduce 61
	Comp_le  reduce 61
	Comp_gt  reduce 61
	Comp_ge  reduce 61
	Eq  reduce 61
	Double_eq  reduce 61
	Triple_eq  reduce 61
	Diff  reduce 61
	Double_diff  reduce 61
	And  reduce 61
	Or  reduce 61
	LBracket  reduce 61
	PVirgule  reduce 61
	Minus  reduce 61


state 37
	instr : LAcc decl_instr_list . RAcc  (14)

	RAcc  shift 79
	.  error


state 38
	expr : LAcc obj_list . RAcc  (30)

	RAcc  shift 80
	.  error


state 39
	binding : Id .  (55)
	binding : Id . DPoints type_expr  (56)
	binding : Id . Eq expr  (57)
	binding : Id . DPoints type_expr Eq expr  (58)

	Eq  shift 81
	DPoints  shift 82
	Rpar  reduce 55
	PVirgule  reduce 55
	Virgule  reduce 55


state 40
	instr : Var_decl bindings . PVirgule  (15)

	PVirgule  shift 83
	.  error


state 41
	bindings : binding .  (59)
	bindings : binding . Virgule bindings  (60)

	Virgule  shift 84
	Rpar  reduce 59
	PVirgule  reduce 59


state 42
	instr : If Lpar . expr Rpar instr  (16)
	instr : If Lpar . expr Rpar instr Else instr  (17)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 85
	left_mem  goto 29


state 43
	instr : While Lpar . expr Rpar instr  (18)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 86
	left_mem  goto 29


state 44
	instr : Return PVirgule .  (19)

	.  reduce 19


state 45
	instr : Return expr . PVirgule  (20)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Plus  shift 53
	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	And  shift 67
	Or  shift 68
	LBracket  shift 69
	PVirgule  shift 87
	Minus  shift 71
	.  error


state 46
	decl : Type Id . Eq type_expr PVirgule  (8)

	Eq  shift 88
	.  error


state 47
	decl : Let bindings . PVirgule  (9)

	PVirgule  shift 89
	.  error


state 48
	decl : Const bindings . PVirgule  (10)

	PVirgule  shift 90
	.  error


state 49
	decl : Function Id . Lpar bindings Rpar return_type LAcc decl_instr_list RAcc  (11)

	Lpar  shift 91
	.  error


50: shift/reduce conflict (shift 55, reduce 27) on Lpar
state 50
	expr : Minus expr .  (27)
	expr : expr . Plus expr  (32)
	expr : expr . Minus expr  (33)
	expr : expr . Times expr  (34)
	expr : expr . Div expr  (35)
	expr : expr . Exp expr  (36)
	expr : expr . Comp_lt expr  (37)
	expr : expr . Comp_le expr  (38)
	expr : expr . Comp_gt expr  (39)
	expr : expr . Comp_ge expr  (40)
	expr : expr . Double_eq expr  (41)
	expr : expr . Diff expr  (42)
	expr : expr . Triple_eq expr  (43)
	expr : expr . Double_diff expr  (44)
	expr : expr . And expr  (45)
	expr : expr . Or expr  (46)
	expr : expr . Lpar expr_list Rpar  (47)
	left_mem : expr . LBracket expr RBracket  (62)
	left_mem : expr . Point Id  (63)

	Times  shift 54
	Lpar  shift 55
	Point  shift 56
	Exp  shift 57
	Div  shift 58
	Comp_lt  shift 59
	Comp_le  shift 60
	Comp_gt  shift 61
	Comp_ge  shift 62
	Double_eq  shift 63
	Triple_eq  shift 64
	Diff  shift 65
	Double_diff  shift 66
	LBracket  shift 69
	Plus  reduce 27
	Rpar  reduce 27
	And  reduce 27
	Or  reduce 27
	RBracket  reduce 27
	RAcc  reduce 27
	PVirgule  reduce 27
	Virgule  reduce 27
	Minus  reduce 27


state 51
	s : decl_instr_list EOL .  (1)

	.  reduce 1


state 52
	decl_instr_list : decl_instr PVirgule . decl_instr_list  (5)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 7
	PVirgule  shift 8
	Var_decl  shift 9
	If  shift 10
	While  shift 11
	Return  shift 12
	Type  shift 13
	Let  shift 14
	Const  shift 15
	Function  shift 16
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	decl_instr_list  goto 92
	decl_instr  goto 25
	decl  goto 26
	instr  goto 27
	expr  goto 28
	left_mem  goto 29


state 53
	expr : expr Plus . expr  (32)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 93
	left_mem  goto 29


state 54
	expr : expr Times . expr  (34)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 94
	left_mem  goto 29


state 55
	expr : expr Lpar . expr_list Rpar  (47)
	expr_list : .  (49)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	Rpar  reduce 49

	expr  goto 34
	expr_list  goto 95
	left_mem  goto 29


state 56
	left_mem : expr Point . Id  (63)

	Id  shift 96
	.  error


state 57
	expr : expr Exp . expr  (36)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 97
	left_mem  goto 29


state 58
	expr : expr Div . expr  (35)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 98
	left_mem  goto 29


state 59
	expr : expr Comp_lt . expr  (37)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 99
	left_mem  goto 29


state 60
	expr : expr Comp_le . expr  (38)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 100
	left_mem  goto 29


state 61
	expr : expr Comp_gt . expr  (39)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 101
	left_mem  goto 29


state 62
	expr : expr Comp_ge . expr  (40)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 102
	left_mem  goto 29


state 63
	expr : expr Double_eq . expr  (41)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 103
	left_mem  goto 29


state 64
	expr : expr Triple_eq . expr  (43)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 104
	left_mem  goto 29


state 65
	expr : expr Diff . expr  (42)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 105
	left_mem  goto 29


state 66
	expr : expr Double_diff . expr  (44)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 106
	left_mem  goto 29


state 67
	expr : expr And . expr  (45)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 107
	left_mem  goto 29


state 68
	expr : expr Or . expr  (46)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 108
	left_mem  goto 29


state 69
	left_mem : expr LBracket . expr RBracket  (62)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 109
	left_mem  goto 29


state 70
	instr : expr PVirgule .  (13)

	.  reduce 13


state 71
	expr : expr Minus . expr  (33)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 110
	left_mem  goto 29


state 72
	expr : left_mem Eq . expr  (48)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 111
	left_mem  goto 29


state 73
	obj_list : Id . DPoints expr  (53)
	obj_list : Id . DPoints expr Virgule obj_list  (54)

	DPoints  shift 78
	.  error


state 74
	expr : Lpar expr Rpar .  (25)

	.  reduce 25


state 75
	expr_list_2 : Virgule . expr_list  (52)
	expr_list : .  (49)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	Rpar  reduce 49
	RBracket  reduce 49

	expr  goto 34
	expr_list  goto 112
	left_mem  goto 29


state 76
	expr_list : expr expr_list_2 .  (50)

	.  reduce 50


state 77
	expr : LBracket expr_list RBracket .  (29)

	.  reduce 29


state 78
	obj_list : Id DPoints . expr  (53)
	obj_list : Id DPoints . expr Virgule obj_list  (54)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 113
	left_mem  goto 29


state 79
	instr : LAcc decl_instr_list RAcc .  (14)

	.  reduce 14


state 80
	expr : LAcc obj_list RAcc .  (30)

	.  reduce 30


state 81
	binding : Id Eq . expr  (57)

	Plus  shift 3
	Lpar  shift 4
	Typeof  shift 5
	LBracket  shift 6
	LAcc  shift 30
	Cst_int  shift 17
	Cst_float  shift 18
	Cst_bool  shift 19
	Cst_string  shift 20
	Id  shift 21
	Minus  shift 22
	.  error

	expr  goto 114
	left_mem  goto 29


state 82
	binding : Id DPoints . type_expr  (56)
	binding : Id DPoints . type_expr Eq expr  (58)

	Type_num  shift 115
	Type_bool  shift 116
	Type_string  shift 117
	.  error

	type_expr  goto 118


state 83
	instr : Var_decl bindings PVirgule .  (15)

	.  reduce 15


state 84
	bindings : binding Virgule . bindings  (60)

	Id  shift 39
	.  error

	bindings  goto 119
	binding  goto 41

